BudgetVisualization/wwwroot/css/app.css
@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');

html, body {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

a, .btn-link {
    color: #0366d6;
}

.btn-primary {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}

app {
    position: relative;
    display: flex;
    flex-direction: column;
}

.top-row {
    height: 3.5rem;
    display: flex;
    align-items: center;
}

.main {
    flex: 1;
}

    .main .top-row {
        background-color: #f7f7f7;
        border-bottom: 1px solid #d6d5d5;
        justify-content: flex-end;
    }

        .main .top-row > a, .main .top-row .btn-link {
            white-space: nowrap;
            margin-left: 1.5rem;
        }

.main .top-row a:first-child {
    overflow: hidden;
    text-overflow: ellipsis;
}

.sidebar {
    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
}

    .sidebar .top-row {
        background-color: rgba(0,0,0,0.4);
    }

    .sidebar .navbar-brand {
        font-size: 1.1rem;
    }

    .sidebar .oi {
        width: 2rem;
        font-size: 1.1rem;
        vertical-align: text-top;
        top: -2px;
    }

    .sidebar .nav-item {
        font-size: 0.9rem;
        padding-bottom: 0.5rem;
    }

        .sidebar .nav-item:first-of-type {
            padding-top: 1rem;
        }

        .sidebar .nav-item:last-of-type {
            padding-bottom: 1rem;
        }

        .sidebar .nav-item a {
            color: #d7d7d7;
            border-radius: 4px;
            height: 3rem;
            display: flex;
            align-items: center;
            line-height: 3rem;
        }

            .sidebar .nav-item a.active {
                background-color: rgba(255,255,255,0.25);
                color: white;
            }

            .sidebar .nav-item a:hover {
                background-color: rgba(255,255,255,0.1);
                color: white;
            }

.content {
    padding-top: 1.1rem;
}

.navbar-toggler {
    background-color: rgba(255, 255, 255, 0.1);
}

.valid.modified:not([type=checkbox]) {
    outline: 1px solid #26b050;
}

.invalid {
    outline: 1px solid red;
}

.validation-message {
    color: red;
}

#blazor-error-ui {
    background: lightyellow;
    bottom: 0;
    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
    display: none;
    left: 0;
    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
    position: fixed;
    width: 100%;
    z-index: 1000;
}

#blazor-error-ui .dismiss {
    cursor: pointer;
    position: absolute;
    right: 0.75rem;
    top: 0.5rem;
}

@media (max-width: 767.98px) {
    .main .top-row:not(.auth) {
        display: none;
    }

    .main .top-row.auth {
        justify-content: space-between;
    }

    .main .top-row a, .main .top-row .btn-link {
        margin-left: 0;
    }

    /* NavMenu */
    .sidebarApp-item {
        height: 13vh;
        float: left;
        padding-top: 12px;
        width: 33.3vw;
        background-color: whitesmoke;
        border-right-style: inset;
        border-right-width: 1px;
        border-right-color: white;
        border-bottom-style: ridge;
        border-bottom-width: 1px;
        border-bottom-color: snow;
    }

    .sidebarApp-item-content {
        width: 100px;
        height: 100px;
        font-size: 11px;
        position: relative;
        text-align: center;
        margin: auto;
    }

    .sidebarApp {
        background-color: whitesmoke;
        width: 100vw;
        display: inline-block;
        height: -webkit-fill-available;
    }

    .comparison-image {
        opacity: 0.1;
        height: 100px;
        filter: grayscale(1);
    }

    .comparison-image-container {
        position: fixed;
        left: 0;
        right: 0;
        margin: 5% auto;
        text-align: center;4
    }

    .comparison-text {
        padding-top: 2vh;
        text-align: center;
        font-weight: 700;
        font-stretch: normal;
        font-size: small;
    }


    .carousell {
        max-width: 47.8vw;
        max-height: 60vh;
        overflow-y: scroll;
        float: left;
        margin: 1vw;
    }


    .carousell-result {
        top: 74vh;
        position: fixed;
        padding: 0.5rem;
        height: 100vh;
        width: 100vw;
        font-size: 12px;
        border-radius: 7px;
        background: whitesmoke;
        /*outline-style: auto;
        outline-color: lightgray;*/
    }

    .carousell-container {
        display: flex;
        height: 50%;
    }

    .carousell::-webkit-scrollbar { 
        /* WebKit */
        width: 0px;
    }

    .carousell-page {
        display: inline-flex;
    }

    .carousell-headings {
        line-height: 18px;
        display: inline-flex;
    }

    .carousell-headings-titles {
        width: 50vw;
        padding-left: 12px;
        padding-top: 14px;
        border-right: solid;
        border-color: whitesmoke;
        background-color: snow;
    }

    .carousell-headings-title-comparison {
        width: 24.3vw;
        margin-left: 0.8vw;
        padding-top: 14px;
        padding-left: 12px;
        background-color: snow;
    }

    .carousell-headings-title {
        line-height: 18px;
        display: inline-flex;
        font-stretch: ultra-expanded;
        font-size: initial;
    }

    .carousell-headings-subtitle {
        line-height: 10px;
        font-size: x-small;
        width: 100%;
        padding-right: 10px;
    }

    .message {
        border: 3px solid #F6D55C;
        border-radius: 25px;
        padding: 10px;
        margin-top: 2vw;
        margin-bottom: 1vw;
        display: none;
    }

    .icon {
        font-size: 5em;
        color: #F6D55C;
    }

    .icon-grid {
        margin: auto;
    }

    .proposedItem {
        height: auto;
        padding: 0;
        background-color: #e6e6e6;
        font-size: 13px;
        border-radius: 8px;
        margin-bottom: 3px;
    }

    .comparison-text-part {
        position:absolute;
    }

    .comparison-text-part-original {
        position: absolute;
    }

    .comparison-text-part:nth-child(1) {
        animation-name: fade;
        animation-fill-mode: both;
        animation-iteration-count: infinite;
        animation-duration: 5s;
        animation-direction: alternate-reverse;
    }


    .comparison-text-part:nth-child(2) {
        animation-name: fade;
        animation-fill-mode: both;
        animation-iteration-count: infinite;
        animation-duration: 5s;
        animation-direction: alternate;
    }

    @keyframes fade {
        0%,50% {
            opacity: 0;
        }

        100% {
            opacity: 1;
        }
    }




}

@media (min-width: 768px) {
    app {
        flex-direction: row;
    }

    .sidebar {
        width: 250px;
        height: 100vh;
        position: sticky;
        top: 0;
    }

    .main .top-row {
        position: sticky;
        top: 0;
    }

    .main > div {
        padding-left: 1rem !important;
    }

    .navbar-toggler {
        display: none;
    }

    .sidebar .collapse {
        /* Never collapse the sidebar for wide screens */
        display: block;
    }

    /* NavMenu */
    .sidebarApp-item {
        justify-content: space-around;
        height: 115px;
        border-bottom-style: ridge;
        border-bottom-width: 1px;
        border-bottom-color: #e4e4e4;
    }

    .sidebarApp-item {
        justify-content: space-around;
        height: 115px;
        border-bottom-style: ridge;
        border-bottom-width: 1px;
        border-bottom-color: #e4e4e4;
    }

    .sidebarApp-item-content {
        text-align: -webkit-center;
        font-size: 12px;
    }

    .sidebarApp {
        width: 110px;
        height: 100vh;
        background-color: whitesmoke;
    }

    .carousell-result {
        display: flex;
        flex-flow: column;
        height: 70vh;
        width: 24vw;
        padding: 12px;
        margin-left: 1vw;
    }

    .carousell::-webkit-scrollbar { /* WebKit */
        width: 0px;
    }

    .proposedItem {
        height: auto;
        padding: 0;
        background-color: #e6e6e6;
        font-size: 13px;
        border-radius: 8px;
        margin-bottom: 3px;
    }

    .carousell-last {
        margin-left: 0.5vw;
    }

    .carousell {
        width: 25vw;
        max-height: 70vh;
        overflow-y: scroll;
        padding-top: 4px;
    }

    .carousell-container {
        display: inline-flex;
        border-bottom: outset;
        border-bottom-color: rgb(0 0 0 / 19%);
        border-top: outset;
        border-top-color: rgb(0 0 0 / 19%);
    }

    .carousell-page {
        display: inline-flex;
    }

    .carousell-headings {
        line-height: 18px;
        display: inline-flex;
        padding-top: 14px;
    }

    .carousell-headings-titles {
        width: 25.3vw;
        padding-left: 12px;
        padding-top: 14px;
        border-right: solid;
        border-color: whitesmoke;
        background-color: snow;
    }

    .carousell-headings-title-comparison {
        width: 24.3vw;
        margin-left: 0.8vw;
        padding-top: 14px;
        padding-left: 12px;
        background-color: snow;
    }

    .carousell-headings-title {
        line-height: 18px;
        display: inline-flex;
        font-stretch: ultra-expanded;
    }

    .carousell-headings-subtitle {
        line-height: 10px;
        font-size: x-small;
        width: 25vw;
        padding-right: 10px;
    }

    .comparison-image {
        max-width: 130px;
    }

    .comparison-text {
        padding: 12px;
    }

    .message {
        border: 3px solid #F6D55C;
        border-radius: 25px;
        padding: 10px;
        margin-top: 2vw;
        margin-bottom: 1vw;
        margin-left: inherit;
        margin-right: inherit;
        width: 75.5vw;
        /*display: none;*/
    }

    .icon {
        font-size: 5em;
        color: #F6D55C;
    }

    .icon-grid {
        margin: auto;
    }

}

